fix(vercel): 添加SPA路由重定向配置
配置Vercel的重定向规则，将所有路径重定向到index.html，
以支持单页应用的路由功能

--- a/email-scheduler-frontend/vercel.json
+++ b/email-scheduler-frontend/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/:path*",
       "destination": "https://saibo-ui.vercel.app/:path*"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
