--- a/email-scheduler/package.json
+++ b/email-scheduler/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cron": "^3.1.6",
+    "dayjs": "^1.11.19",
     "mysql2": "^3.6.0",
     "nest-winston": "^1.9.4",
     "nodemailer": "^6.9.7",
@@ -42,7 +43,9 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "timezone": "^1.0.23",
     "typeorm": "^0.3.17",
+    "utc": "^0.1.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
