``` fix(backend): 移除后端调度配置并更新API目标地址
移除email-scheduler项目中的crons调度配置，因为该功能已迁移至其他服务。
同时更新前端vercel.json中的API重写目标地址，从saibo-ui.vercel.app改为
新的服务器地址 http://156.226.28.65:3000，以确保API请求能够正确转发。
```

--- a/email-scheduler-frontend/vercel.json
+++ b/email-scheduler-frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://saibo-ui.vercel.app/:path*"
+      "destination": "http://156.226.28.65:3000/:path*"
     },
     {
       "source": "/(.*)",
